# redi

./: .gitignore  CMakeLists.txt  README.md
SimulationFiles/: bioDiffusion.txt  bonner1.txt  brusselator1DV1.txt  brusselator2DV1.txt  convergenceTest1D.txt  convergenceTest2D.txt  convergenceTest3D.txt  cubicConv1D.txt  cubicStep1d.txt  cubicTest1d.txt  decay2D.txt  decaySphere.txt  diffusionTest1D.txt  diffusionTest1D_2.txt  diffusionTest2D.txt  diffusionTest3D.txt  diffusionTestSphere.txt  discontinuityTest1D.txt  kanaarDiffusion.txt  randomWalkTest1D.txt  randomWalkTest2D.txt  randomWalkTest3D.txt  reactionTest1D.txt  refinementTest.txt
include/: chemicalsystem.h  concentration.h  concentrationset.h  namespace.h  reaction.h  reactionratenode.h  reactionratetree.h  rediconst.h  redienums.h  reditypes.h  runstatistics.h  simcontrol.h  simulation.h
src/: chemicalsystem.cpp  concentration.cpp  main.cpp  mc.cpp  reaction.cpp  reactionratenode.cpp  reactionratetree.cpp  simcontrol.cpp  simulation.cpp
